navbar text alignment fixing

--- a/src/App.css
+++ b/src/App.css
@@ -633,6 +633,18 @@ nav.navbar .menuText {
 }
 
 .myCommunities .puerto-rico-images {
+  display: flex;
+  justify-content: space-around;
+  /* Adjust as needed: space-between, space-evenly, etc. */
   align-items: center;
+}
 
+
+.myCommunities .puerto-rico-images img {
+  max-width: 100%;
+  /* Adjust as needed */
+  height: auto;
+  /* Maintain aspect ratio */
+  margin: 0 10px;
+  /* Optional: add space between images */
 }
